--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -8,13 +8,20 @@
    li {
       padding: 1.2rem;
       cursor: pointer;
-      // background-color: var(--color-frame-active);
 
+      &:hover {
+         outline: 1px solid var(--color-frame-active);
+         border-radius: var(--frame-radii);
+         transform: scale(1.02);
+         transition: transform .1s linear;
+
+      }
 
       &.active {
          background-color: var(--color-frame-active);
          color: var(--color-white);
          border-radius: var(--frame-radii);
+         transition: all .2s linear;
       }
    }
 
