--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,17 +1,19 @@
 .card {
-   width: 21rem;
    border-radius: var(--radii);
+   box-shadow: 0px 10px 13px -4px rgba(35, 35, 95, 0.19);
 
    div {
+      border-radius: var(--radii) var(--radii) 0 0;
       position: relative;
       height: 16.2rem;
 
       img {
          position: absolute;
-         width: 68.575%;
-         top: 50%;
-         left: 50%;
-         transform: translate(-50%, -50%);
+         width: 100%;
+         height: 100%;
+         top: 0;
+         left: 0;
+         object-fit: contain;
       }
    }
 
