--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -1,9 +1,10 @@
 .sidebar {
+   flex: 0 0 264px;
    letter-spacing: -0.1px;
    padding: 1.2rem;
    border: 1px solid var(--color-border);
    border-radius: var(--radii);
-   max-width: 26.4rem;
+   align-self: start;
 
    li {
       padding: 1.2rem;
