--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -13,12 +13,10 @@
       &:hover {
          outline: 1px solid var(--color-frame-active);
          border-radius: var(--frame-radii);
-         transform: scale(1.02);
-         transition: transform .1s linear;
-
       }
 
       &.active {
+         outline: none;
          background-color: var(--color-frame-active);
          color: var(--color-white);
          border-radius: var(--frame-radii);
